# serializer version: 1
# name: test_delivery_status_cli
  '''
  {
    "delivery_id": "20120114T120001-product1-4811",
    "pushing_entity_id": "GLO-MERCATOR-TOULOUSE-FR",
    "product_id": "product1",
    "dataset_id": "dataset1",
    "operations": [
      {
        "operation": "upload",
        "files": [
          {
            "key_suffix": "file1.txt",
            "file_size_mb": 0,
            "checksum": "a0ec500ddee5f80143f0f489b28ca832",
            "upload_start_time": "2012-01-14T12:00:01Z",
            "upload_end_time": "2012-01-14T12:00:01Z"
          },
          {
            "key_suffix": "file2.txt",
            "file_size_mb": 0,
            "checksum": "e9c91642feb1c07cf3c270c7165c3c3c",
            "upload_start_time": "2012-01-14T12:00:01Z",
            "upload_end_time": "2012-01-14T12:00:01Z"
          }
        ]
      }
    ],
    "status": "pending"
  }
  '''
# ---
# name: test_delivery_status_python_interface
  '''
  {
    "delivery_id": "20120114T120001-product1-4582",
    "pushing_entity_id": "GLO-MERCATOR-TOULOUSE-FR",
    "product_id": "product1",
    "dataset_id": "dataset1",
    "operations": [
      {
        "operation": "upload",
        "files": [
          {
            "key_suffix": "file1.txt",
            "error_message": null,
            "file_size_mb": 0,
            "checksum": "a0ec500ddee5f80143f0f489b28ca832",
            "upload_start_time": "2012-01-14T12:00:01Z",
            "upload_end_time": "2012-01-14T12:00:01Z"
          },
          {
            "key_suffix": "file2.txt",
            "error_message": null,
            "file_size_mb": 0,
            "checksum": "e9c91642feb1c07cf3c270c7165c3c3c",
            "upload_start_time": "2012-01-14T12:00:01Z",
            "upload_end_time": "2012-01-14T12:00:01Z"
          }
        ]
      }
    ],
    "status": "pending",
    "status_timestamp": null,
    "error_message": null
  }
  '''
# ---
